# docker-django-poetry

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  entrypoint.sh  pyproject.toml
app/store/: wsgi.py
app/store/settings/: base.py  prod.py
