[tool.poetry]
name = "docker-django-poetry-multi-stage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2"
gunicorn = "^20.1.0"
psycopg2-binary = "2.9.6"
whitenoise = "6.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
